--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "RelationalOperators.C": "cpp"
+    "RelationalOperators.C": "cpp",
+    "Assignment.C": "cpp"
   }
 }
