Grade checker System

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
     "RelationalOperators.C": "cpp",
     "Assignment.C": "cpp",
     "NumberComparison.C": "cpp",
-    "Age.C": "cpp"
+    "Age.C": "cpp",
+    "Grade.C": "cpp"
   }
 }
