Chained comparisons dont work like math

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,7 @@
     "Grade.C": "cpp",
     "ROIF.C": "cpp",
     "DiffDatatypes.C": "cpp",
-    "Pitfall1.C": "cpp"
+    "Pitfall1.C": "cpp",
+    "Pitfall2.C": "cpp"
   }
 }
