--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
     "ROIF.C": "cpp",
     "DiffDatatypes.C": "cpp",
     "Pitfall1.C": "cpp",
-    "Pitfall2.C": "cpp"
+    "Pitfall2.C": "cpp",
+    "NumberProperties.C": "cpp"
   }
 }
