--- a/logical Operators/.vscode/settings.json
+++ b/logical Operators/.vscode/settings.json
@@ -60,6 +60,7 @@
     "LogicalOperators.C": "cpp",
     "AgeCategory.C": "cpp",
     "GradeAndAttendance.C": "cpp",
-    "DiffDatatypes.C": "cpp"
+    "DiffDatatypes.C": "cpp",
+    "NumberProperties.C": "cpp"
   }
 }
