Short Circuit Evaluation

--- a/logical Operators/.vscode/settings.json
+++ b/logical Operators/.vscode/settings.json
@@ -61,6 +61,7 @@
     "AgeCategory.C": "cpp",
     "GradeAndAttendance.C": "cpp",
     "DiffDatatypes.C": "cpp",
-    "NumberProperties.C": "cpp"
+    "NumberProperties.C": "cpp",
+    "ShortCircuitEvaluation.C": "cpp"
   }
 }
