Triangle type checker

--- a/logical Operators/.vscode/settings.json
+++ b/logical Operators/.vscode/settings.json
@@ -65,6 +65,7 @@
     "ShortCircuitEvaluation.C": "cpp",
     "Procedence.C": "cpp",
     "Precedence.C": "cpp",
-    "LoanEligibilitySystem.C": "cpp"
+    "LoanEligibilitySystem.C": "cpp",
+    "TriangleCheckerSystem.C": "cpp"
   }
 }
