De Morgan's Law

--- a/logical Operators/.vscode/settings.json
+++ b/logical Operators/.vscode/settings.json
@@ -66,6 +66,7 @@
     "Procedence.C": "cpp",
     "Precedence.C": "cpp",
     "LoanEligibilitySystem.C": "cpp",
-    "TriangleCheckerSystem.C": "cpp"
+    "TriangleCheckerSystem.C": "cpp",
+    "DeMorganLaw.C": "cpp"
   }
 }
