Advanced bitmask logic with logical operators

--- a/logical Operators/.vscode/settings.json
+++ b/logical Operators/.vscode/settings.json
@@ -68,6 +68,7 @@
     "LoanEligibilitySystem.C": "cpp",
     "TriangleCheckerSystem.C": "cpp",
     "DeMorganLaw.C": "cpp",
-    "BusinessRulesSystem.C": "cpp"
+    "BusinessRulesSystem.C": "cpp",
+    "Bitmask-Logic.C": "cpp"
   }
 }
