Advanced short-circuit evaluation tricks

--- a/logical Operators/.vscode/settings.json
+++ b/logical Operators/.vscode/settings.json
@@ -69,6 +69,7 @@
     "TriangleCheckerSystem.C": "cpp",
     "DeMorganLaw.C": "cpp",
     "BusinessRulesSystem.C": "cpp",
-    "Bitmask-Logic.C": "cpp"
+    "Bitmask-Logic.C": "cpp",
+    "Short-Circuit-Evaluation.C": "cpp"
   }
 }
