Real world security system

--- a/logical Operators/.vscode/settings.json
+++ b/logical Operators/.vscode/settings.json
@@ -70,6 +70,7 @@
     "DeMorganLaw.C": "cpp",
     "BusinessRulesSystem.C": "cpp",
     "Bitmask-Logic.C": "cpp",
-    "Short-Circuit-Evaluation.C": "cpp"
+    "Short-Circuit-Evaluation.C": "cpp",
+    "Real-World-Security System.C": "cpp"
   }
 }
