--- a/Loops/.vscode/settings.json
+++ b/Loops/.vscode/settings.json
@@ -57,6 +57,7 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "while-loop.C": "cpp"
+    "while-loop.C": "cpp",
+    "User-Input-Validation.C": "cpp"
   }
 }
