--- a/Loops/.vscode/settings.json
+++ b/Loops/.vscode/settings.json
@@ -60,6 +60,7 @@
     "while-loop.C": "cpp",
     "User-Input-Validation.C": "cpp",
     "Smart-Home-Sensor-Monitoring.C": "cpp",
-    "Counting-Up.C": "cpp"
+    "Counting-Up.C": "cpp",
+    "Counting-Down.C": "cpp"
   }
 }
