Input validation using while loop

--- a/Loops/.vscode/settings.json
+++ b/Loops/.vscode/settings.json
@@ -63,6 +63,7 @@
     "Counting-Up.C": "cpp",
     "Counting-Down.C": "cpp",
     "User-controlled-loop.C": "cpp",
-    "Energy-Consumption-tracker-system.C": "cpp"
+    "Energy-Consumption-tracker-system.C": "cpp",
+    "Input-Validation.C": "cpp"
   }
 }
