Smart lighting scheduler

--- a/Loops/.vscode/settings.json
+++ b/Loops/.vscode/settings.json
@@ -64,6 +64,7 @@
     "Counting-Down.C": "cpp",
     "User-controlled-loop.C": "cpp",
     "Energy-Consumption-tracker-system.C": "cpp",
-    "Input-Validation.C": "cpp"
+    "Input-Validation.C": "cpp",
+    "Smart-light-scheduler.C": "cpp"
   }
 }
